examples/reference/directive_typo_endsection_fixit_error.err
Assembly failed:
5: ERROR [asm202]
    5 |         .endsectio
        ^
help: did you mean .endsection?
suggestion: replace 5:9-19 with ".ENDSECTION"
ERROR: Unknown directive .ENDSECTIO
